# GPTbot

./: .dockerignore  .env.development  .gitignore  Dockerfile  Makefile  Readme.md  admin.Dockerfile  alembic.ini  docker-compose-ci.yml  docker-compose-local.yml  docker-compose.yml  main.py  pyproject.toml  run_admin_panel.py
deploy/docker/: docker-compose-dev.yml
deploy/nginx/: nginx.conf
logs/: error.log.1  info.log.3
nginx/: nginx.conf
src/api/: main.py
src/api/middleware/: auth.py
src/api/models/: __init__.py  assist_models.py  bonus_models.py  models.py
src/api/static/: auth.html  index.html
src/api/utils/: get_static_folder.py
src/api/v1/: auth.py  dialogs.py  payment.py  routes.py
src/bot/handlers/: assist_handler.py  cancel_handler.py  code_handler.py  dialogs_config_handler.py  dialogs_conifg_handler.py  image_handler.py  premium_handler.py  profile_handler.py  start_handler.py  text_handler.py
src/bot/keyboards/: dialog_config_keyboard.py  gpt_assist_keyboard.py  main_menu.py  profile.py  select_gpt.py
src/bot/middlewares/: antiflood.py  banned.py
src/bot/states/: dialog_state.py  image_state.py  text_state.py
src/config/: config.py
src/db/: database.py  enums_class.py  models.py
src/db/custom_decorators/: __init__.py  service.py
src/db/migrations/: env.py
src/db/orm/: bonus_links_orm.py  config_orm.py  dialog_orm.py  gpt_assistant_orm.py  user_orm.py
src/recurent/: service.py
src/scripts/chat_gpt/: chat_gpt.py  (+2 more)
src/utils/: cached_user.py  generate_payment.py  premium_script.py  text_scripts.py
tests/broadcast/: test.py
(+53 files in other folders)
