[project]
name = "gptbot"
version = "0.1.0"
description = ""
authors = [
    {name = "c0ral0vii",email = "demidovic.pavel2@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram (>=3.17.0,<4.0.0)",
    "aiohttp (>=3.11.11,<4.0.0)",
    "redis (>=5.2.1,<6.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "sqlalchemy (>=2.0.36,<3.0.0)",
    "rabbitmq (>=0.2.0,<0.3.0)",
    "pydantic-settings (>=2.7.1,<3.0.0)",
    "alembic (>=1.14.0,<2.0.0)",
    "anthropic (>=0.42.0,<0.43.0)",
    "black (>=24.10.0,<25.0.0)",
    "pika (>=1.3.2,<2.0.0)",
    "aio-pika (>=9.5.4,<10.0.0) ; python_version >= \"3.12\" and python_version < \"4.0\"",
    "psycopg (>=3.2.3,<4.0.0)",
    "psycopg-binary (>=3.2.3,<4.0.0)",
    "openai (>=1.59.5,<2.0.0)",
    "aiogoogletrans (>=3.3.3,<4.0.0)",
    "pillow (>=11.1.0,<12.0.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "fastapi (>=0.115.8,<0.116.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "authx (>=1.4.1,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
